fix(forms): align labels inside horizontal forms #809 (#1162)
## PR Checklist

Please check if your PR fulfills the following requirements:

- [ ] Tests for the changes have been added (for bug fixes / features)
- [ ] Docs have been added / updated (for bug fixes / features)
- [ ] If applicable, have a visual design approval

## PR Type

What kind of change does this PR introduce?

<!-- Please check the one that applies to this PR using "x". -->

- [x] Bugfix
- [ ] Feature
- [ ] Code style update (formatting, local variables)
- [ ] Refactoring (no functional changes, no api changes)
- [ ] Build related changes
- [ ] CI related changes
- [ ] Documentation content changes
- [ ] Other... Please describe:

## What is the current behavior?

<!-- Please describe the current behavior that you are modifying, or
link to a relevant issue. -->

Issue Number: #809, CDE-1599

## What is the new behavior?

## Does this PR introduce a breaking change?

- [ ] Yes
- [x] No

<!-- If this PR contains a breaking change, please describe the impact
and migration path for existing applications below. -->

## Other information

---------

--- a/projects/ui/src/shim.cds-core.scss
+++ b/projects/ui/src/shim.cds-core.scss
@@ -785,6 +785,10 @@
   --clr-forms-label-disabled-color: var(--cds-alias-typography-disabled, var(--cds-global-color-construction-400)); // #{$clr-forms-label-disabled-color};
   --clr-forms-icon-disabled-color: var(--cds-alias-status-disabled);
   --clr-forms-placeholder-disabled-color: var(--cds-alias-typography-disabled, var(--cds-global-color-construction-400));
+  .clr-form-horizontal .clr-form-control > .clr-control-label,
+  .clr-form-horizontal .clr-form-control > .clr-form-control.clr-form-control-multi .clr-control-label {
+    margin-top: var(--cds-global-space-3);
+  }
 
   // Input
   --clr-forms-input-padding: 0 var(--cds-global-space-5);
